--- a/FE-SIDASI/package.json
+++ b/FE-SIDASI/package.json
@@ -20,6 +20,7 @@
     "@testing-library/user-event": "^14.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icon": "^1.0.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
